Reformatting Python tip 5

--- a/frontend/tips/5-select-from-a-dropdown/_python.mdx
+++ b/frontend/tips/5-select-from-a-dropdown/_python.mdx
@@ -1,114 +1,60 @@
-## Example 1
+import TipCode from "@site/src/components/tipCode";
 
+## TL;DR - Show Me The Code
 
-First let's pull in our requisite libraries, declare the test class, and wire up some simple `setUp` and `tearDown` methods.
+<TipCode codePath={"5-select-from-a-dropdown/code/python/dropdown.py"} language={"python"}/>
 
-```python
-# filename: dropdown.py
-import unittest
-from selenium import webdriver
-from selenium.webdriver.common.by import By
+## Code Walkthrough
 
+### Importing Libraries, Setup and Teardown
 
-class DropDown(unittest.TestCase):
+The first lines are pulling in our requisite libraries our testing framework (e.g., `import pytest`),
+driving the browser with Selenium (e.g., `from selenium import webdriver`), and a locator strategy to
+find the elements (e.g. `from selenium.webdriver.common.by import By`), and wire up some setup and
+teardown methods for our tests.
 
-    def setUp(self):
-        self.driver = webdriver.Firefox()
+### Example 1
 
-    def tearDown(self):
-        self.driver.quit()
+After visiting [the example application](http://the-internet.herokuapp.com/dropdown) we find the dropdown list by its ID and store it in a variable. We
+then find each clickable element in the dropdown list (e.g., each `option`) with `find_elements(By.TAG_NAME, 'option')`.
 
-# ...
-```
+Grabbing all of the options returns a collection that we iterate over and when the text matches what we want it
+will click on it.
 
-Now lets' wire up our test.
-
-```python
-# filename: dropdown.py
-# ...
-    def test_example_1(self):
-        driver = self.driver
-        driver.get('http://the-internet.herokuapp.com/dropdown')
-        dropdown_list = driver.find_element(By.ID, 'dropdown')
-        options = dropdown_list.find_elements(By.TAG_NAME, 'option')
-        for opt in options:
-            if opt.text == 'Option 1':
-                opt.click()
-                break
-        for opt in options:
-            if opt.is_selected():
-                selected_option = opt.text
-                break
-        assert selected_option == 'Option 1', "Selected option should be Option 1"
-
-```
-
-After visiting [the example application](http://the-internet.herokuapp.com/dropdown) we find the dropdown list by its ID and store it in a variable. We then find each clickable element in the dropdown list (e.g., each `option`) with `find_elements_by_tag_name`.
-
-Grabbing all of the options returns a collection that we iterate over and when the text matches what we want it will click on it.
-
-We finish the test by performing a check to see that our selection was made correctly. This is done by reiterating over the dropdown options collection one more time. This time we're getting the text of the item that was selected, storing it in a variable, and making an assertion against it.
+We finish the test by performing a check to see that our selection was made correctly. This is done by reiterating
+over the dropdown options collection one more time. This time we're getting the text of the item that was
+selected, storing it in a variable, and making an assertion against it.
 
 While this works, there is a simpler, built-in way to do this with Selenium. Let's give that a go.
 
-## Example 2
+### Example 2
 
-```python
-# filename: dropdown.py
-import unittest
-from selenium import webdriver
-from selenium.webdriver.support.select import Select as WebDriverSelect
-# ...
+Similar to the first example, we are finding the dropdown list by its ID. But instead of iterating over its option
+elements and clicking based on a conditional check, we are leveraging a built-in helper function of Selenium,
+[`Select`](http://seleniumhq.github.io/selenium/docs/api/py/webdriver_support/selenium.webdriver.support.select.html#module-selenium.webdriver.support.select), and its [`select_by_visibile_text`](http://seleniumhq.github.io/selenium/docs/api/py/webdriver_support/selenium.webdriver.support.select.html#selenium.webdriver.support.select.Select.select_by_visible_text) method to choose the item we want.
 
-    def test_example_2(self):
-        driver = self.driver
-        driver.get('http://the-internet.herokuapp.com/dropdown')
-        dropdown = driver.find_element(By.ID, 'dropdown')
-        select_list = WebDriverSelect(dropdown)
-        select_list.select_by_visible_text('Option 1')
-        selected_option = select_list.first_selected_option.text
-        assert selected_option == 'Option 1', "Selected option should be Option 1"
-
-if __name__ == "__main__":
-    unittest.main()
-```
-
-Similar to the first example, we are finding the dropdown list by its ID. But instead of iterating over its option elements and clicking based on a conditional check, we are leveraging a built-in helper function of Selenium, [`Select`](http://seleniumhq.github.io/selenium/docs/api/py/webdriver_support/selenium.webdriver.support.select.html#module-selenium.webdriver.support.select), and its [`select_by_visibile_text`](http://seleniumhq.github.io/selenium/docs/api/py/webdriver_support/selenium.webdriver.support.select.html#selenium.webdriver.support.select.Select.select_by_visible_text) method to choose the item we want.
-
-We then ask the `select_list` what option was selected by using the [`first_selected_option`](http://seleniumhq.github.io/selenium/docs/api/py/webdriver_support/selenium.webdriver.support.select.html#selenium.webdriver.support.select.Select.first_selected_option) method. This returns a Selenium Element that we grab the text from, storing it in a variable (e.g., `selected_option`).
+We then ask the `select_list` what option was selected by using the [`first_selected_option`](http://seleniumhq.github.io/selenium/docs/api/py/webdriver_support/selenium.webdriver.support.select.html#selenium.webdriver.support.select.Select.first_selected_option) method. This
+returns a Selenium Element that we grab the text from, storing it in a variable (e.g., `selected_option`).
 
 Then we perform our assertion against this variable (just like in the previous example).
 
-__NOTE: In addition to selecting by text, you can also select by value.__
+In addition to selecting by text, you can also select by value.
 
 ```python
-  select_list.select_by_value('1')
+    select_list.select_by_value('1')
 ```
 
-## Expected Behavior
+### Executing the Test
 
-If you save this file with either of these examples and run it (e.g., `python dropdown.py` from the command-line) here is what will happen:
+Before executing the test, we need to install the required libraries. We can do this by running
+`pip install -r requirements.txt` from the command-line. The `requirements.txt` file contains the libraries we
+need to install.
 
-+ Open the browser
-+ Visit the example application
-+ Find the dropdown list
-+ Select the requested item from the dropdown list
-+ Assert that the selected option is the one you expect
-+ Close the browser
+<details>
+    <summary>Toggle to see the <code>requirements.txt</code> file.</summary>
+    <div>
+        <TipCode codePath={"5-select-from-a-dropdown/code/python/requirements.txt"} language={"txt"}/>
+    </div>
+</details>
 
-
-## Summary
-
-In this tip, we've gone over using Selenium to select from a drop down using the drop down list, or XPath to find an element within the dropdown list.
-
-Hopefully this will help you when selecting items from a dropdown list.
-
-Happy Testing!
-
-## About the Author
-
-Dave Haeffner is the original writer of Elemental Selenium -- a free, once weekly Selenium tip newsletter that's read by thousands of testing professionals. He also created and maintains the-internet (an open-source web app that's perfect for writing automated tests against).
-
-Dave has helped numerous companies successfully implement automated acceptance testing; including The Motley Fool, ManTech International, Sittercity, and Animoto. He is also an active member of the Selenium project and has spoken at numerous conferences and meetups around the world about automated acceptance testing.
-
-![Dave Haeffner profile picture](/img/authors/dave-haeffner.jpeg#author-img 'a title')
+After installing the required libraries, we can run the test by executing `pytest dropdown.py` from the command-line.
