--- a/frontend/tips/5-select-from-a-dropdown/main.mdx
+++ b/frontend/tips/5-select-from-a-dropdown/main.mdx
@@ -18,7 +18,7 @@ category:
 
 # How to Select from a Dropdown List
 
-## Intro
+## The Problem
 
 Some common use cases for selecting from a dropdown list might be selecting sizes or styles from a dropdown
 menu while online shopping, or selecting your method of payment. And, while selecting from a dropdown list
