Making tip naming consistent

--- a/frontend/tips/4-work-with-multiple-windows/main.mdx
+++ b/frontend/tips/4-work-with-multiple-windows/main.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Work With Multiple Windows'
+title: 'How to Work with Multiple Windows'
 id: '4-work-with-multiple-windows'
 slug: /4-work-with-multiple-windows
-sidebar_label: Work With Multiple Windows
+sidebar_label: How to Work with Multiple Windows
 description: "This tip will explain how to work with multiple windows in Selenium and switch between them."
 number: 4
 hide_table_of_contents: true
