--- a/frontend/tips/5-select-from-a-dropdown/main.mdx
+++ b/frontend/tips/5-select-from-a-dropdown/main.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Select From A Dropdown'
+title: 'How to Select from a Dropdown List'
 id: '5-select-from-a-dropdown'
 slug: /5-select-from-a-dropdown
-sidebar_label: Select From A Dropdown
+sidebar_label: How to Select from a Dropdown List
 description: "Some common use cases for selecting from a dropdown list might be selecting sizes or styles from a dropdown menu while online shopping, or selecting your method of payment."
 number: 5
 hide_table_of_contents: true
