--- a/frontend/tips/3-work-with-frames/main.mdx
+++ b/frontend/tips/3-work-with-frames/main.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Work With Frames'
+title: 'How to Work with Frames'
 id: '3-work-with-frames'
 slug: /3-work-with-frames
-sidebar_label: Work With Frames
+sidebar_label: How to Work with Frames
 description: "In this tip, you'll learn how to work with frames and write tests against them."
 number: 3
 hide_table_of_contents: true
