tips(serenity-js): added 3-work-with-frames (#671)
* tips(serenity-js): added 3-work-with-frames

* chore(serenity-js): removed test report committed by accident

* chore(npm): rebuilt package-lock.json

* ci(github): extracted serenity-js worflow, as requested by @diemol

* ci(tips): moved playwright browser installation to tips

--- a/frontend/tips/3-work-with-frames/main.mdx
+++ b/frontend/tips/3-work-with-frames/main.mdx
@@ -41,6 +41,7 @@ import DisplayTips from '@site/src/components/displayTips';
     {label: 'Java', value: 'java'},
     {label: 'JavaScript', value: 'javascript'},
     {label: 'Ruby', value: 'ruby'},
+    {label: 'Serenity/JS', value: 'serenity-js'},
 ]}/>
 
 ## Expected Behavior
@@ -105,6 +106,13 @@ import DefaultAvatar from "@site/src/components/defaultAvatar";
     imgSrc={"https://github.com/sturman.png"}
     description={"Contributed the initial Java code for this tip."}
     url={"https://github.com/sturman"}
+/>
+
+<DefaultAvatar
+    name="Jan Molak"
+    imgSrc={"https://github.com/jan-molak.png"}
+    description={"Contributed the Serenity/JS code for this tip."}
+    url={"https://github.com/jan-molak"}
 />
 
 ## Authors
