Improving wording and removing line numbers for tip 3

--- a/frontend/tips/3-work-with-frames/_java.mdx
+++ b/frontend/tips/3-work-with-frames/_java.mdx
@@ -31,8 +31,9 @@ While this example helps illustrate the point of frame switching, it's not very 
 
 ## Example 2
 
-Here is a more likely example you'll run into -- working with a WYSIWYG Editor like [TinyMCE](http://www.tinymce.com/). You can see the
-page we're testing [here](http://the-internet.herokuapp.com/tinymce).
+Here is a more likely example you'll run into -- working with a
+<abbr title="What You See Is What You Get">WYSIWYG</abbr> Editor like [TinyMCE](http://www.tinymce.com/). You can see
+the page we're testing [here](http://the-internet.herokuapp.com/tinymce).
 
 Once the page loads we switch into the frame that contains TinyMCE and...
 
