--- a/frontend/tips/3-work-with-frames/_python.mdx
+++ b/frontend/tips/3-work-with-frames/_python.mdx
@@ -27,7 +27,8 @@ While this example helps illustrate the point of frame switching, it's not very 
 
 ## Example 2
 
-Line 18 shows a more likely example you'll run into -- working with a WYSIWYG Editor like [TinyMCE](http://www.tinymce.com/). You can see
+Line 18 shows a more likely example you'll run into -- working with a
+<abbr title="What You See Is What You Get">WYSIWYG</abbr> Editor like [TinyMCE](http://www.tinymce.com/). You can see
 the page we're testing on [the-internet](http://the-internet.herokuapp.com/tinymce).
 
 ### Executing the Test
