--- a/frontend/tips/3-work-with-frames/main.mdx
+++ b/frontend/tips/3-work-with-frames/main.mdx
@@ -26,8 +26,8 @@ easy to make a mistake if we're not paying attention.
 
 ## A Solution
 
-Rather than getting frustrated when authoring your tests, you can work with the elements in a frame by telling
-Selenium to switch to that frame first. Then the rest of your test should be more straightforward.
+Rather than getting frustrated when authoring your tests, you can work with the elements in a frame switching
+to that frame first. Then the rest of your test should be more straightforward.
 
 Let's explore further with some examples.
 
