--- a/frontend/tips/3-work-with-frames/_javascript.mdx
+++ b/frontend/tips/3-work-with-frames/_javascript.mdx
@@ -34,7 +34,8 @@ While this example helps illustrate the point of frame switching, it's not very 
 
 ### Example 2
 
-Here is a more likely example you'll run into -- working with a WYSIWYG (What You See Is What You Get) Editor like
+Here is a more likely example you'll run into -- working with a
+<abbr title="What You See Is What You Get">WYSIWYG</abbr> Editor like
 [TinyMCE](http://www.tinymce.com/). You can see the page we're testing [here](http://the-internet.herokuapp.com/tinymce).
 
 Keep in mind that if we need to access a part of the page outside of the frame we are currently in we'll need to
