Giving credits to @asolntsev for the Selenide tip

--- a/frontend/tips/1-upload-a-file/main.mdx
+++ b/frontend/tips/1-upload-a-file/main.mdx
@@ -93,26 +93,29 @@ import DefaultAvatar from "@site/src/components/defaultAvatar";
     description={"Python code review"}
     url={"https://github.com/bittner"}
 />
-
 <DefaultAvatar
     name="Jonathan Taylor"
     imgSrc={"https://github.com/jtay2380.png"}
     description={"Contributed the initial C# code for this tip."}
     url={"https://github.com/jtay2380"}
 />
-
 <DefaultAvatar
     name="Manoj Kumar"
     imgSrc={"https://github.com/manoj9788.png"}
     description={"Contributed the initial JavaScript code for this tip."}
     url={"https://github.com/manoj9788"}
 />
-
 <DefaultAvatar
     name="Roman Isko"
     imgSrc={"https://github.com/sturman.png"}
     description={"Contributed the initial Java code for this tip."}
     url={"https://github.com/sturman"}
+/>
+<DefaultAvatar
+    name="Roman Isko"
+    imgSrc={"https://github.com/asolntsev.png"}
+    description={"Contributed the Selenide code for this tip."}
+    url={"https://github.com/asolntsev"}
 />
 
 ## Authors
