--- a/frontend/tips/1-upload-a-file/_selenide.mdx
+++ b/frontend/tips/1-upload-a-file/_selenide.mdx
@@ -2,7 +2,8 @@ import TipCode from "@site/src/components/tipCode";
 
 ## TL;DR - Show Me The Code
 
-<TipCode codePath={"1-upload-a-file/code/selenide/src/test/java/com/elemental/selenium/UploadTest.java"} language={"java"}/>
+<TipCode codePath={"1-upload-a-file/code/selenide/src/test/java/com/elemental/selenium/UploadTest.java"}
+         language={"java"}/>
 
 ## Code Walkthrough
 
@@ -11,11 +12,11 @@ import TipCode from "@site/src/components/tipCode";
 Lines 3 to 7 are pulling in our requisite classes
  * for annotations (e.g., `org.junit.jupiter.api.Test`),
  * opening the browser with Selenide (e.g., `com.codeborne.selenide.Selenide.open`),
- * matchers for assertions (e.g., `com.codeborne.selenide.Condition.text`) 
+ * matchers for assertions (e.g., `com.codeborne.selenide.Condition.text`)
  * etc.
 
 NB! You don't need to add the typical "selenium*" dependencies.  
-Just one dependency is enough: `com.codeborne:selenide`. 
+Just one dependency is enough: `com.codeborne:selenide`.
 It will pull down all the needed Selenium dependencies automatically.
 
 ### Setup and Teardown
@@ -23,32 +24,30 @@ It will pull down all the needed Selenium dependencies automatically.
 Line 15 opens a browser with given URL.
 
 Under the hood, Selenide doesn't all the needed jobs:
-* detects the browser (can be customized if needed), 
-* setups commons browser settings (can be customized if needed) 
+* detects the browser (can be customized if needed),
+* setups commons browser settings (can be customized if needed)
 * etc.
 
 No teardown is needed because Selenide automatically closes the browser when the test finishes.
 
 ### The Test
 
-Lines 20 to 22 are the test itself.
-
 We call `uploadFileFromClasspath()` method and annotate it with `@Test` so it is run as a test.
 
-Next, we visit the page with the upload form, find the input allowing to upload files, and submit the form. 
+Next, we visit the page with the upload form, find the input allowing to upload files, and submit the form.
 
 After the file is uploaded to the page it will display the filename it just processed.
 We use this text to perform our assertion (making sure the uploaded file is what we expect).
 
-NB! "Classpath" is a special folder in Java that (among others) contains all files from folder `src/test/resources`)
+NB! "Classpath" is a special folder in Java that (among others) contains all files from the
+folder `src/test/resources`.
 
 That's why we store the file we want to upload to folder `src/test/resources` and call method `uploadFromClasspath`.
 
-### Alternative test
-If you are afraid of the term "classpath" :), or prefer to store test files in some other folders,
-you can call method `uploadFile` explicitly specifying file path. 
+### An Alternative test
 
-This example is described in lines 27-29. 
+If you want to avoid the term "classpath", or prefer to store test files in some other folders,
+you can call method `uploadFile` explicitly specifying file path.
 
 ### Executing the Test
 
