Adding social media card for tip 6

--- a/frontend/tips/6-open-new-window/main.mdx
+++ b/frontend/tips/6-open-new-window/main.mdx
@@ -7,6 +7,7 @@ description: 'Nearly everyone, at some point during their normal flow of work on
 number: 6
 hide_table_of_contents: true
 publish_date: 2023-02-17
+image: "img/cards/6-open-new-window.png"
 tags:
   - 'new window'
   - 'new tab'
