Adding social media card for tip 6

--- a/frontend/tips/6-open-new-window/main.mdx
+++ b/frontend/tips/6-open-new-window/main.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Open a New Window or Tab'
+title: 'How to Open a New Window or Tab'
 id: '6-open-new-window'
 slug: /6-open-new-window
-sidebar_label: Open a New Window or Tab
+sidebar_label: How to Open a New Window or Tab
 description: 'Nearly everyone, at some point during their normal flow of work on the computer, has had to open a new window or tab.'
 number: 6
 hide_table_of_contents: true
