Switching to outro

--- a/frontend/tips/6-open-new-window/main.mdx
+++ b/frontend/tips/6-open-new-window/main.mdx
@@ -54,7 +54,7 @@ import DisplayTips from '@site/src/components/displayTips';
 - Check the number of windows open
 - Close all browsers
 
-## Summary
+## Outro
 
 There are many possible use cases for this new way of opening and focusing on new browser tabs and windows across
 OS and browser combinations.
