fix typo on existing site: duplicate "In it, In it"

--- a/frontend/tips/3-work-with-frames/_ruby.mdx
+++ b/frontend/tips/3-work-with-frames/_ruby.mdx
@@ -14,7 +14,7 @@ and `run` methods.
 
 ### Example 1
 
-Line 20 shows our first test. In it, In it we'll step through [an example of nested frames](http://the-internet.herokuapp.com/nested_frames) from
+Line 20 shows our first test. In it, we'll step through [an example of nested frames](http://the-internet.herokuapp.com/nested_frames) from
 [the-internet](https://github.com/saucelabs/the-internet).
 
 With Selenium's [`.switch_to.frame`](https://seleniumhq.github.io/selenium/docs/api/rb/Selenium/WebDriver/TargetLocator.html#frame-instance_method) method we can simply switch to the frame we want. It accepts either an
