--- a/frontend/tips/3-work-with-frames/_java.mdx
+++ b/frontend/tips/3-work-with-frames/_java.mdx
@@ -17,7 +17,7 @@ Next, we'll start our class off with some setup and teardown methods, covered in
 
 ### Example 1
 
-Line 28 shows our first test. In it, In it we'll step through [an example of nested frames](http://the-internet.herokuapp.com/nested_frames) from
+Line 28 shows our first test. In it, we'll step through [an example of nested frames](http://the-internet.herokuapp.com/nested_frames) from
 [the-internet](https://github.com/saucelabs/the-internet).
 
 With Selenium's `.switchTo()` method we can easily switch to the frame we want. When using it for frames
