--- a/frontend/tips/3-work-with-frames/_javascript.mdx
+++ b/frontend/tips/3-work-with-frames/_javascript.mdx
@@ -20,7 +20,7 @@ method, `afterEach`, will execute. This calls `driver.quit()` which ends the ses
 
 ### Example 1
 
-Line 15 shows our first test. In it, In it we'll step through [an example of nested frames](http://the-internet.herokuapp.com/nested_frames) from
+Line 15 shows our first test. In it, we'll step through [an example of nested frames](http://the-internet.herokuapp.com/nested_frames) from
 [the-internet](https://github.com/saucelabs/the-internet).
 
 With Selenium's `.switchTo().frame` method we can easily switch to the frame we want. It accepts either a numbered
