--- a/frontend/tips/3-work-with-frames/main.mdx
+++ b/frontend/tips/3-work-with-frames/main.mdx
@@ -42,6 +42,7 @@ import DisplayTips from '@site/src/components/displayTips';
     {label: 'JavaScript', value: 'javascript'},
     {label: 'Ruby', value: 'ruby'},
     {label: 'Serenity/JS', value: 'serenity-js'},
+    {label: 'Selenide', value: 'selenide'},
 ]}/>
 
 ## Expected Behavior
@@ -133,3 +134,9 @@ import DefaultAvatar from "@site/src/components/defaultAvatar";
     author={true}
 />
 
+<DefaultAvatar
+  name="Andrei Solntsev"
+  imgSrc={"https://github.com/asolntsev.png"}
+  description={"Contributed the Selenide code for this tip."}
+  url={"https://github.com/asolntsev"}
+/>
