--- a/frontend/tips/1-upload-a-file/main.mdx
+++ b/frontend/tips/1-upload-a-file/main.mdx
@@ -112,7 +112,7 @@ import DefaultAvatar from "@site/src/components/defaultAvatar";
     url={"https://github.com/sturman"}
 />
 <DefaultAvatar
-    name="Roman Isko"
+    name="Andrei Solntsev"
     imgSrc={"https://github.com/asolntsev.png"}
     description={"Contributed the Selenide code for this tip."}
     url={"https://github.com/asolntsev"}
