--- a/frontend/tips/25-how-to-work-with-tables/main.mdx
+++ b/frontend/tips/25-how-to-work-with-tables/main.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'How To Work With Tables'
 id: '25-how-to-work-with-tables'
-slug: /25-how-to-work-with-tables'
+slug: /25-how-to-work-with-tables
 sidebar_label: How To Work With Tables
 description: "Odds are at some point you've come across the use of tables in a web application to display data or information to a user, giving them the option to sort and manipulate it. Depending on your application it can be quite common and something you will want to write an automated test for."
 number: 25
