Add tip "5: How to select from a dropdown list" in Selenide

--- a/frontend/tips/5-select-from-a-dropdown/main.mdx
+++ b/frontend/tips/5-select-from-a-dropdown/main.mdx
@@ -35,6 +35,7 @@ import DisplayTips from '@site/src/components/displayTips';
     {label: 'Java', value: 'java'},
     {label: 'JavaScript', value: 'javascript'},
     {label: 'Ruby', value: 'ruby'},
+    {label: 'Selenide', value: 'selenide'},
 ]}/>
 
 ## Expected Behavior
@@ -104,4 +105,11 @@ import DefaultAvatar from "@site/src/components/defaultAvatar";
     description={"Current maintainer of Elemental Selenium"}
     url={"https://github.com/diemol"}
     author={true}
+/>
+
+<DefaultAvatar
+  name="Andrei Solntsev"
+  imgSrc={"https://github.com/asolntsev.png"}
+  description={"Contributed the Selenide code for this tip."}
+  url={"https://github.com/asolntsev"}
 />
