Improving wording in tip 3

--- a/frontend/tips/3-work-with-frames/_python.mdx
+++ b/frontend/tips/3-work-with-frames/_python.mdx
@@ -14,7 +14,7 @@ with Selenium (e.g., `from selenium import webdriver`), and a locator strategy t
 
 ### Example 1
 
-Line 11 shows our first test. In it, we'll step through [an example of nested frames](http://the-internet.herokuapp.com/nested_frames)
+Line 11 shows our first test. In it, we'll step through [an example of nested frames](https://the-internet.herokuapp.com/nested_frames)
 which can be found on [the-internet](https://github.com/saucelabs/the-internet).
 
 With Selenium's `.switch_to.frame` method we can easily switch to the frame we want. It accepts either an ID or name
@@ -28,8 +28,8 @@ While this example helps illustrate the point of frame switching, it's not very 
 ## Example 2
 
 Line 18 shows a more likely example you'll run into -- working with a
-<abbr title="What You See Is What You Get">WYSIWYG</abbr> Editor like [TinyMCE](http://www.tinymce.com/). You can see
-the page we're testing on [the-internet](http://the-internet.herokuapp.com/tinymce).
+<abbr title="What You See Is What You Get">WYSIWYG</abbr> Editor like [TinyMCE](https://www.tinymce.com/). You can see
+the page we're testing on [the-internet](https://the-internet.herokuapp.com/tinymce).
 
 ### Executing the Test
 
