--- a/frontend/tips/3-work-with-frames/_serenity-js.mdx
+++ b/frontend/tips/3-work-with-frames/_serenity-js.mdx
@@ -60,7 +60,7 @@ When the `actor` is done, they'll automatically switch their focus back to the t
 ### Example 2
 
 A common scenario where you'll likely run into frames involves working with
-<abbr title="What You See Is What You Get">WYSIWYG</abbr> editors, such as [TinyMCE](http://www.tinymce.com/).
+<abbr title="What You See Is What You Get">WYSIWYG</abbr> editors, such as [TinyMCE](https://www.tinymce.com/).
 
 Our second test scenario is interacting with the [TinyMCE editor embedded in a nested frame](https://the-internet.herokuapp.com/iframe).
 You'll notice that apart from interacting with the frame, this example also demonstrates how to make you `actor`
