--- a/frontend/tips/3-work-with-frames/_csharp.mdx
+++ b/frontend/tips/3-work-with-frames/_csharp.mdx
@@ -16,7 +16,7 @@ Next, we'll start our class off with some setup and teardown methods, covered in
 
 ### Example 1
 
-Line 23 shows our first test. In it, we'll step through [an example of nested frames](http://the-internet.herokuapp.com/nested_frames) from
+Line 23 shows our first test. In it, we'll step through [an example of nested frames](https://the-internet.herokuapp.com/nested_frames) from
 [the-internet](https://github.com/saucelabs/the-internet).
 
 With Selenium's `.SwitchTo()` method we can easily switch to the frame we want. When using it for frames
@@ -31,8 +31,8 @@ While this example helps illustrate the point of frame switching, it's not very 
 ## Example 2
 
 Here is a more likely example you'll run into -- working with a
-<abbr title="What You See Is What You Get">WYSIWYG</abbr> Editor like [TinyMCE](http://www.tinymce.com/). You can see
-the page we're testing [here](http://the-internet.herokuapp.com/tinymce).
+<abbr title="What You See Is What You Get">WYSIWYG</abbr> Editor like [TinyMCE](https://www.tinymce.com/). You can see
+the page we're testing [here](https://the-internet.herokuapp.com/tinymce).
 
 Once the page loads we switch into the frame that contains TinyMCE and...
 
