--- a/frontend/tips/3-work-with-frames/_ruby.mdx
+++ b/frontend/tips/3-work-with-frames/_ruby.mdx
@@ -14,7 +14,7 @@ and `run` methods.
 
 ### Example 1
 
-Line 20 shows our first test. In it, we'll step through [an example of nested frames](http://the-internet.herokuapp.com/nested_frames) from
+Line 20 shows our first test. In it, we'll step through [an example of nested frames](https://the-internet.herokuapp.com/nested_frames) from
 [the-internet](https://github.com/saucelabs/the-internet).
 
 With Selenium's [`.switch_to.frame`](https://seleniumhq.github.io/selenium/docs/api/rb/Selenium/WebDriver/TargetLocator.html#frame-instance_method) method we can simply switch to the frame we want. It accepts either an
@@ -29,7 +29,7 @@ While this example helps illustrate the point of frame switching, it's not very 
 
 Here is a more likely example you'll run into -- working with a
 <abbr title="What You See Is What You Get">WYSIWYG</abbr> Editor like
-[TinyMCE](http://www.tinymce.com/). You can see the page we're testing [here](http://the-internet.herokuapp.com/tinymce).
+[TinyMCE](https://www.tinymce.com/). You can see the page we're testing [here](https://the-internet.herokuapp.com/tinymce).
 
 Once the page loads we switch into the frame that contains TinyMCE and...
 
