--- a/frontend/tips/3-work-with-frames/_selenide.mdx
+++ b/frontend/tips/3-work-with-frames/_selenide.mdx
@@ -9,15 +9,14 @@ import TipCode from "@site/src/components/tipCode";
 
 ### Importing Libraries
 
-Lines 3 to 10 are pulling in our requisite classes
+First, we pull in our requisite classes
  * for annotations (e.g., `org.junit.jupiter.api.Test`),
  * opening the browser with Selenide (e.g., `com.codeborne.selenide.Selenide.open`),
  * Selenide api for frames (e.g., `com.codeborne.selenide.Selenide.switchTo`)
- * etc.
 
 ### Example 1
 
-Lines 16-18 show our first test. In it, we'll step through [an example of nested frames](http://the-internet.herokuapp.com/nested_frames) from
+Our first test is `exampleOne`. In it, we'll step through [an example of nested frames](https://the-internet.herokuapp.com/nested_frames) from
 [the-internet](https://github.com/saucelabs/the-internet).
 
 With Selenide's `.switchTo()` method we can easily switch to the frame we want. When using it for frames
@@ -30,10 +29,10 @@ Once we've done that we're able to find the element we need, grab its text, and 
 ## Example 2
 
 Here is a more likely example you'll run into -- working with a
-<abbr title="What You See Is What You Get">WYSIWYG</abbr> Editor like [TinyMCE](http://www.tinymce.com/). You can see
-the page we're testing [here](http://the-internet.herokuapp.com/tinymce).
+<abbr title="What You See Is What You Get">WYSIWYG</abbr> Editor like [TinyMCE](https://www.tinymce.com/). You can see
+the page we're testing [here](https://the-internet.herokuapp.com/tinymce).
 
-Once the page loads we switch into the frame that contains TinyMCE and...
+Once the page loads we switch into the frame that contains TinyMCE and:
 
 - check the original text
 - input another text
@@ -45,11 +44,9 @@ to it. Thankfully Selenide has a method that enables us to quickly jump back to 
 
 ### More methods for frames
 
-It was just a brief example.  
-Selenide has more methods for working with frames, check these
+Selenide has more methods for working with frames, check:
 * `switchTo().innerFrame()`
 * `switchTo().frame("id", Duration.ofSeconds(6)); // switch with custom timeout`
-* etc.
 
 ### Executing the Test
 
