--- a/frontend/tips/2-download-a-file/_python.mdx
+++ b/frontend/tips/2-download-a-file/_python.mdx
@@ -26,7 +26,7 @@ Here's a breakdown of each of the browser preferences being set:
 + `browser.download.folderList` takes a number. It tells Firefox which download directory to use. `2` tells it to use
 a custom download path, whereas `1` would use the browser's default path, and `0` would place them on the Desktop.
 + `browser.helperApps.neverAsk.saveToDisk` tells Firefox when not to prompt for a file download. It accepts a string
-of [the file's MIME type](http://en.wikipedia.org/wiki/Internet_media_type). If you want to specify more than one, you do it with a comma-separated string (which
+of [the file's MIME type](https://en.wikipedia.org/wiki/Internet_media_type). If you want to specify more than one, you do it with a comma-separated string (which
 we've done).
 + `pdfjs.disabled` is for when downloading PDFs. This overrides the sensible default in Firefox that previews PDFs in
 the browser. It accepts a boolean.
