Improving wording in tip 3 and using https for links

--- a/frontend/tips/4-work-with-multiple-windows/_javascript.mdx
+++ b/frontend/tips/4-work-with-multiple-windows/_javascript.mdx
@@ -15,7 +15,7 @@ some test setup and teardown methods.
 ### Example 1
 
 Line 15 shows a test that exercises new window functionality from an application. In this case, we'll be using
-[the new window example](http://the-internet.herokuapp.com/windows) from [the-internet](https://github.com/saucelabs/the-internet).
+[the new window example](https://the-internet.herokuapp.com/windows) from [the-internet](https://github.com/saucelabs/the-internet).
 
 After loading the page we click the link which spawns a new window. We then grab the window handles (a.k.a. unique
 identifier strings which represent each open browser window) and switch between them based on their order (assuming
